--- a/docs/00-环境准备.md
+++ b/docs/00-环境准备.md
@@ -1,29 +1,32 @@
 # MySQL 实操环境准备
 
 > 在开始学习之前，我们需要先搭建一个本地MySQL环境用于实际操作
+>
+> **本教程统一使用Docker方式，干净、隔离、易于管理**
 
 ---
 
 ## 一、环境要求
 
-- 操作系统：macOS / Linux / Windows
-- MySQL版本：5.7 或 8.0（推荐 8.0）
-- 客户端工具：MySQL命令行客户端
-- 磁盘空间：至少 10GB 可用空间
+- **Docker**：已安装并运行（[安装Docker](https://www.docker.com/get-started)）
+- **MySQL版本**：8.0（推荐）或 5.7
+- **磁盘空间**：至少 10GB 可用空间
+- **内存**：建议 4GB 以上
+
+验证Docker是否安装：
+```bash
+docker --version
+docker ps
+```
 
 ---
 
-## 二、MySQL 安装
+## 二、快速启动（基础配置）
 
-### 方式一：Docker 安装（推荐）
-
-**优点**：干净、隔离、易于管理
+如果你想快速开始学习，使用以下命令即可启动MySQL：
 
 ```bash
-# 1. 拉取MySQL镜像（8.0版本）
-docker pull mysql:8.0
-
-# 2. 启动MySQL容器
+# 启动MySQL容器
 docker run --name mysql-study \
   -e MYSQL_ROOT_PASSWORD=123456 \
   -p 3306:3306 \
@@ -32,146 +35,118 @@ docker run --name mysql-study \
   --character-set-server=utf8mb4 \
   --collation-server=utf8mb4_unicode_ci
 
-# 3. 验证容器是否启动成功
-docker ps | grep mysql-study
-
-# 4. 进入MySQL容器
+# 连接MySQL
 docker exec -it mysql-study mysql -uroot -p123456
-```
 
-### 方式二：macOS Homebrew 安装
-
-```bash
-# 1. 安装MySQL
-brew install mysql
-
-# 2. 启动MySQL服务
-brew services start mysql
-
-# 3. 安全配置（可选）
-mysql_secure_installation
-
-# 4. 连接MySQL
-mysql -uroot -p
-```
-
-### 方式三：Linux 安装
-
-```bash
-# Ubuntu/Debian
-sudo apt update
-sudo apt install mysql-server
-
-# CentOS/RHEL
-sudo yum install mysql-server
-
-# 启动服务
-sudo systemctl start mysqld
-sudo systemctl enable mysqld
-
-# 连接
-mysql -uroot -p
-```
-
----
-
-## 三、初始化配置
-
-连接到MySQL后，执行以下初始化操作：
-
-```sql
--- 1. 查看MySQL版本
-SELECT VERSION();
-
--- 2. 查看字符集
-SHOW VARIABLES LIKE 'character%';
-
--- 3. 创建学习用的数据库
+# 创建学习数据库
 CREATE DATABASE mysql_study DEFAULT CHARACTER SET utf8mb4;
-
--- 4. 使用该数据库
-USE mysql_study;
-
--- 5. 创建测试用户（可选）
-CREATE USER 'student'@'localhost' IDENTIFIED BY 'student123';
-GRANT ALL PRIVILEGES ON mysql_study.* TO 'student'@'localhost';
-FLUSH PRIVILEGES;
 ```
+
+**但是**，为了更好地学习MySQL内部机制（binlog、慢查询、性能优化等），建议使用下面的**完整配置方式**。
 
 ---
 
-## 四、重要参数配置
+## 三、完整配置（推荐）
 
-为了更好地学习MySQL内部机制，建议配置以下参数：
-
-### 查找配置文件位置
+### 步骤1：创建配置文件
 
 ```bash
-# macOS/Linux
-mysql --help | grep my.cnf
+# 创建配置文件目录
+mkdir -p ~/mysql-study/conf
 
-# 或者
-mysqladmin variables | grep 'config-file'
-```
-
-### 编辑配置文件
-
-在 `my.cnf` 或 `my.ini` 中添加：
-
-```ini
+# 创建MySQL配置文件
+cat > ~/mysql-study/conf/my.cnf << 'EOF'
 [mysqld]
+# 基础配置
+character-set-server=utf8mb4
+collation-server=utf8mb4_unicode_ci
+default-time-zone='+8:00'
+
 # 服务器ID（用于主从复制实验）
 server-id=1
 
+# ========== binlog配置 ==========
 # 开启binlog（重要！）
 log-bin=mysql-bin
 binlog_format=ROW
-expire_logs_days=7
+binlog_expire_logs_seconds=604800  # 7天过期（MySQL 8.0）
+# expire_logs_days=7  # MySQL 5.7使用此参数
+max_binlog_size=100M
 
-# redo log配置
-innodb_log_file_size=256M
-innodb_log_files_in_group=4
-innodb_flush_log_at_trx_commit=1
-
-# binlog持久化
+# binlog持久化（双1配置之一）
 sync_binlog=1
 
-# 慢查询日志
+# ========== redo log配置 ==========
+innodb_log_file_size=256M
+innodb_log_files_in_group=2
+innodb_flush_log_at_trx_commit=1  # 双1配置之二
+
+# ========== 慢查询日志 ==========
 slow_query_log=1
 slow_query_log_file=/var/log/mysql/mysql-slow.log
 long_query_time=2
+log_queries_not_using_indexes=1
 
-# 通用查询日志（调试用，生产环境关闭）
+# ========== 通用查询日志（调试用） ==========
+# 默认关闭，需要时可以动态开启
 general_log=0
 general_log_file=/var/log/mysql/mysql-general.log
 
-# 字符集
-character-set-server=utf8mb4
-collation-server=utf8mb4_unicode_ci
-
-# 其他性能参数
+# ========== 性能配置 ==========
 innodb_buffer_pool_size=1G
 max_connections=200
+innodb_io_capacity=2000
+innodb_io_capacity_max=4000
+
+# ========== 其他实用配置 ==========
+# 允许本地文件导入
+local_infile=1
+
+# 时区表
+log_timestamps=SYSTEM
+
+[mysql]
+default-character-set=utf8mb4
+
+[client]
+default-character-set=utf8mb4
+EOF
 ```
 
-### 重启MySQL使配置生效
+### 步骤2：启动MySQL容器（完整配置）
 
 ```bash
-# Docker方式
-docker restart mysql-study
+# 停止并删除旧容器（如果存在）
+docker stop mysql-study 2>/dev/null || true
+docker rm mysql-study 2>/dev/null || true
 
-# Homebrew方式
-brew services restart mysql
+# 启动MySQL容器（挂载配置文件）
+docker run --name mysql-study \
+  -e MYSQL_ROOT_PASSWORD=123456 \
+  -p 3306:3306 \
+  -v ~/mysql-study/conf/my.cnf:/etc/mysql/conf.d/my.cnf \
+  -v ~/mysql-study/data:/var/lib/mysql \
+  -v ~/mysql-study/logs:/var/log/mysql \
+  -d mysql:8.0
 
-# Linux systemd方式
-sudo systemctl restart mysqld
+# 等待MySQL启动（约10秒）
+sleep 10
+
+# 查看容器状态
+docker ps | grep mysql-study
+
+# 查看MySQL启动日志
+docker logs mysql-study
 ```
 
----
+### 步骤3：验证配置
 
-## 五、验证环境
+```bash
+# 连接MySQL
+docker exec -it mysql-study mysql -uroot -p123456
 
-执行以下SQL验证环境是否正确配置：
+# 在MySQL中执行以下命令验证配置
+```
 
 ```sql
 -- 1. 验证binlog是否开启
@@ -182,30 +157,38 @@ SHOW VARIABLES LIKE 'log_bin';
 SHOW VARIABLES LIKE 'binlog_format';
 -- 应该显示 ROW
 
--- 3. 验证redo log配置
-SHOW VARIABLES LIKE 'innodb_log%';
+-- 3. 验证双1配置
+SHOW VARIABLES LIKE 'sync_binlog';
+-- 应该显示 1
 
--- 4. 查看存储引擎
-SHOW ENGINES;
--- InnoDB应该是默认引擎
+SHOW VARIABLES LIKE 'innodb_flush_log_at_trx_commit';
+-- 应该显示 1
 
--- 5. 查看当前连接信息
-SHOW PROCESSLIST;
+-- 4. 验证慢查询日志
+SHOW VARIABLES LIKE 'slow_query_log';
+-- 应该显示 ON
 
--- 6. 查看数据库列表
-SHOW DATABASES;
+-- 5. 查看MySQL版本
+SELECT VERSION();
+
+-- 6. 查看字符集
+SHOW VARIABLES LIKE 'character%';
 ```
 
 ---
 
-## 六、准备示例数据
+## 四、初始化学习环境
 
-创建课程中使用的基础表结构：
+连接到MySQL后，执行以下初始化操作：
 
 ```sql
+-- 创建学习用的数据库
+CREATE DATABASE mysql_study DEFAULT CHARACTER SET utf8mb4;
+
+-- 切换到学习数据库
 USE mysql_study;
 
--- 创建简单测试表T（课程第1讲中的例子）
+-- 创建课程第1讲中的测试表
 CREATE TABLE T (
     ID INT PRIMARY KEY,
     c INT
@@ -218,239 +201,373 @@ INSERT INTO T VALUES (1, 1), (2, 2), (3, 3), (4, 4), (5, 5);
 SELECT * FROM T;
 
 -- 查看表结构
-DESC T;
+SHOW CREATE TABLE T\G
 
--- 查看表的创建语句
-SHOW CREATE TABLE T;
+-- (可选) 创建测试用户
+CREATE USER 'student'@'%' IDENTIFIED BY 'student123';
+GRANT ALL PRIVILEGES ON mysql_study.* TO 'student'@'%';
+FLUSH PRIVILEGES;
 ```
 
 ---
 
-## 七、常用管理命令
+## 五、常用Docker命令
 
-### 启动/停止/重启MySQL
+### 容器管理
 
 ```bash
-# Docker方式
+# 启动容器
 docker start mysql-study
+
+# 停止容器
 docker stop mysql-study
+
+# 重启容器
 docker restart mysql-study
 
-# macOS Homebrew
-brew services start mysql
-brew services stop mysql
-brew services restart mysql
+# 查看容器状态
+docker ps -a | grep mysql-study
 
-# Linux systemd
-sudo systemctl start mysqld
-sudo systemctl stop mysqld
-sudo systemctl restart mysqld
-sudo systemctl status mysqld
+# 查看容器日志
+docker logs mysql-study
+docker logs -f mysql-study  # 实时跟踪日志
+
+# 删除容器（数据会保留在挂载目录）
+docker rm -f mysql-study
 ```
 
 ### 连接MySQL
 
 ```bash
-# 本地连接
-mysql -uroot -p
+# 方式1：使用docker exec（推荐）
+docker exec -it mysql-study mysql -uroot -p123456
 
-# 指定数据库连接
-mysql -uroot -p mysql_study
+# 方式2：指定数据库连接
+docker exec -it mysql-study mysql -uroot -p123456 mysql_study
 
-# 远程连接
-mysql -h 127.0.0.1 -P 3306 -uroot -p
+# 方式3：使用本地MySQL客户端（需要安装mysql-client）
+mysql -h 127.0.0.1 -P 3306 -uroot -p123456
 
-# 执行SQL文件
-mysql -uroot -p mysql_study < script.sql
+# 方式4：使用mycli（带语法高亮）
+# brew install mycli
+mycli -h 127.0.0.1 -P 3306 -uroot -p123456
 ```
 
 ### 查看日志
 
 ```bash
-# Docker方式查看容器日志
+# 查看容器日志（MySQL启动日志、错误日志）
 docker logs mysql-study
-docker logs -f mysql-study  # 实时跟踪
-
-# 查看错误日志
-tail -f /var/log/mysql/error.log
+docker logs -f mysql-study --tail 100
 
 # 查看慢查询日志
-tail -f /var/log/mysql/mysql-slow.log
+docker exec -it mysql-study tail -f /var/log/mysql/mysql-slow.log
 
-# 查看binlog
-mysqlbinlog mysql-bin.000001
+# 或直接查看挂载目录
+tail -f ~/mysql-study/logs/mysql-slow.log
+
+# 查看binlog列表
+docker exec -it mysql-study mysql -uroot -p123456 -e "SHOW BINARY LOGS;"
+
+# 查看binlog内容
+docker exec -it mysql-study mysqlbinlog /var/lib/mysql/mysql-bin.000001
+```
+
+### 执行SQL文件
+
+```bash
+# 从宿主机执行SQL文件
+docker exec -i mysql-study mysql -uroot -p123456 mysql_study < ~/mysql-study/scripts/test.sql
+
+# 或复制文件到容器内执行
+docker cp ~/mysql-study/scripts/test.sql mysql-study:/tmp/
+docker exec -it mysql-study mysql -uroot -p123456 mysql_study -e "source /tmp/test.sql"
 ```
 
 ---
 
-## 八、工作目录说明
+## 六、配置文件说明
+
+### 目录结构
 
 ```
 ~/mysql-study/
-├── scripts/          # SQL脚本文件
-│   ├── 01-basic/    # 基础篇脚本
-│   ├── 02-practice/ # 实践篇脚本
-│   └── backup/      # 备份文件
-├── logs/            # 日志文件（如果本地安装）
-└── data/            # 数据文件（Docker挂载目录）
+├── conf/
+│   └── my.cnf          # MySQL配置文件
+├── data/               # MySQL数据文件（自动创建）
+├── logs/               # 日志文件（自动创建）
+│   ├── mysql-slow.log  # 慢查询日志
+│   └── error.log       # 错误日志
+└── scripts/            # SQL脚本（手动创建）
+    ├── 01-basic/
+    ├── 02-practice/
+    └── backup/
 ```
 
-创建工作目录：
+创建脚本目录：
+```bash
+mkdir -p ~/mysql-study/scripts/{01-basic,02-practice,backup}
+```
+
+### 修改配置
+
+如果需要修改MySQL配置：
 
 ```bash
-mkdir -p ~/mysql-study/{scripts/{01-basic,02-practice,backup},logs,data}
+# 1. 编辑配置文件
+vim ~/mysql-study/conf/my.cnf
+
+# 2. 重启容器使配置生效
+docker restart mysql-study
+
+# 3. 验证配置
+docker exec -it mysql-study mysql -uroot -p123456 -e "SHOW VARIABLES LIKE 'binlog%';"
+```
+
+### 动态修改配置（不重启）
+
+某些配置可以动态修改：
+
+```sql
+-- 开启通用查询日志（调试时使用）
+SET GLOBAL general_log = 1;
+
+-- 修改慢查询阈值
+SET GLOBAL long_query_time = 1;
+
+-- 查看可动态修改的变量
+SHOW VARIABLES WHERE Variable_name LIKE 'general_log%';
 ```
 
 ---
 
-## 九、客户端工具推荐
+## 七、备份与恢复
 
-### 命令行工具
-
-1. **MySQL CLI**（官方命令行）- 已安装
-2. **mycli** - 带语法高亮和自动补全
+### 数据备份
 
 ```bash
-# macOS
-brew install mycli
+# 方式1：使用mysqldump（推荐）
+docker exec mysql-study mysqldump -uroot -p123456 \
+  --single-transaction \
+  --routines \
+  --triggers \
+  --events \
+  mysql_study > ~/mysql-study/scripts/backup/mysql_study_$(date +%Y%m%d).sql
 
-# Linux
-pip install mycli
+# 方式2：备份所有数据库
+docker exec mysql-study mysqldump -uroot -p123456 \
+  --all-databases \
+  --single-transaction \
+  > ~/mysql-study/scripts/backup/all_databases_$(date +%Y%m%d).sql
 
-# 使用
-mycli -uroot -p
+# 方式3：直接复制数据目录（需要停止MySQL）
+docker stop mysql-study
+tar -czf ~/mysql-study/backup_$(date +%Y%m%d).tar.gz ~/mysql-study/data
+docker start mysql-study
 ```
 
-### 图形化工具（可选）
+### 数据恢复
 
-- **MySQL Workbench**（官方免费）
-- **DBeaver**（开源免费）
-- **Sequel Pro / Sequel Ace**（macOS）
-- **Navicat**（商业软件）
+```bash
+# 从SQL文件恢复
+docker exec -i mysql-study mysql -uroot -p123456 mysql_study \
+  < ~/mysql-study/scripts/backup/mysql_study_20241224.sql
+
+# 恢复所有数据库
+docker exec -i mysql-study mysql -uroot -p123456 \
+  < ~/mysql-study/scripts/backup/all_databases_20241224.sql
+```
 
 ---
 
-## 十、故障排查
+## 八、故障排查
 
-### 无法启动MySQL
+### 容器无法启动
 
 ```bash
-# 1. 查看错误日志
+# 查看详细日志
 docker logs mysql-study
-# 或
-tail -f /var/log/mysql/error.log
 
-# 2. 检查端口占用
+# 常见问题：
+# 1. 端口占用
 lsof -i:3306
-netstat -an | grep 3306
+# 解决：修改端口映射 -p 3307:3306
 
-# 3. 检查磁盘空间
+# 2. 配置文件错误
+docker run --rm -v ~/mysql-study/conf/my.cnf:/etc/mysql/conf.d/my.cnf \
+  mysql:8.0 mysqld --help --verbose
+
+# 3. 权限问题（数据目录）
+sudo chown -R $(whoami) ~/mysql-study/data
+
+# 4. 磁盘空间不足
 df -h
-
-# 4. 重置MySQL（慎用）
-docker rm -f mysql-study
-# 重新创建容器
-```
-
-### 忘记root密码
-
-```bash
-# Docker方式
-docker exec -it mysql-study bash
-mysqld_safe --skip-grant-tables &
-mysql
-# 执行SQL重置密码
-ALTER USER 'root'@'localhost' IDENTIFIED BY 'new_password';
-FLUSH PRIVILEGES;
 ```
 
 ### 连接被拒绝
+
+```bash
+# 检查容器是否运行
+docker ps | grep mysql-study
+
+# 检查端口映射
+docker port mysql-study
+
+# 进入容器检查
+docker exec -it mysql-study bash
+mysql -uroot -p123456
+```
 
 ```sql
 -- 检查用户权限
 SELECT user, host FROM mysql.user;
 
--- 创建允许远程连接的用户
+-- 允许远程连接（如果需要）
 CREATE USER 'root'@'%' IDENTIFIED BY '123456';
-GRANT ALL PRIVILEGES ON *.* TO 'root'@'%';
+GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' WITH GRANT OPTION;
 FLUSH PRIVILEGES;
 ```
 
+### 忘记root密码
+
+```bash
+# 删除容器重新创建
+docker rm -f mysql-study
+
+# 重新启动（数据保留在~/mysql-study/data）
+docker run --name mysql-study \
+  -e MYSQL_ROOT_PASSWORD=new_password \
+  -p 3306:3306 \
+  -v ~/mysql-study/conf/my.cnf:/etc/mysql/conf.d/my.cnf \
+  -v ~/mysql-study/data:/var/lib/mysql \
+  -v ~/mysql-study/logs:/var/log/mysql \
+  -d mysql:8.0
+```
+
 ---
 
-## 十一、性能监控命令
+## 九、性能监控
+
+### 常用监控命令
 
 ```sql
--- 查看当前所有连接
+-- 查看当前连接
 SHOW FULL PROCESSLIST;
 
 -- 查看InnoDB状态
-SHOW ENGINE INNODB STATUS;
+SHOW ENGINE INNODB STATUS\G
 
 -- 查看表状态
-SHOW TABLE STATUS LIKE 'T';
+SHOW TABLE STATUS LIKE 'T'\G
 
--- 查看索引使用情况
-SHOW INDEX FROM T;
+-- 查看慢查询统计
+SHOW GLOBAL STATUS LIKE 'Slow_queries';
 
--- 查看变量
-SHOW VARIABLES LIKE '%timeout%';
-
--- 查看状态
+-- 查看连接数
 SHOW STATUS LIKE 'Threads%';
+SHOW VARIABLES LIKE 'max_connections';
+
+-- 查看buffer pool使用情况
+SHOW STATUS LIKE 'Innodb_buffer_pool%';
+```
+
+### 分析慢查询日志
+
+```bash
+# 查看慢查询日志
+docker exec -it mysql-study tail -100 /var/log/mysql/mysql-slow.log
+
+# 使用pt-query-digest分析（需要安装percona-toolkit）
+docker exec -it mysql-study pt-query-digest /var/log/mysql/mysql-slow.log
 ```
 
 ---
 
-## 十二、环境验证清单
+## 十、环境验证清单
 
 完成以下检查确保环境就绪：
 
-- [ ] MySQL服务正常启动
-- [ ] 能够通过命令行连接MySQL
-- [ ] binlog已开启（log_bin = ON）
-- [ ] 创建了 mysql_study 数据库
-- [ ] 创建了测试表 T 并插入数据
-- [ ] 能够执行 SELECT、INSERT、UPDATE 操作
-- [ ] 查看日志文件路径正确
-- [ ] 配置参数符合课程要求
-
-验证脚本：
-
-```sql
--- 执行以下检查
+```bash
+# 执行验证脚本
+docker exec -it mysql-study mysql -uroot -p123456 << 'EOF'
 SELECT
     '环境检查' AS check_item,
     CASE
-        WHEN @@version LIKE '8.0%' OR @@version LIKE '5.7%' THEN '通过'
-        ELSE '版本不符'
+        WHEN @@version LIKE '8.0%' THEN '✓ MySQL 8.0'
+        WHEN @@version LIKE '5.7%' THEN '✓ MySQL 5.7'
+        ELSE '✗ 版本不符'
     END AS mysql_version,
     CASE
-        WHEN @@log_bin = 1 THEN '通过'
-        ELSE 'binlog未开启'
+        WHEN @@log_bin = 1 THEN '✓ 已开启'
+        ELSE '✗ 未开启'
     END AS binlog_status,
     CASE
-        WHEN @@binlog_format = 'ROW' THEN '通过'
-        ELSE 'binlog格式不正确'
-    END AS binlog_format_check;
+        WHEN @@binlog_format = 'ROW' THEN '✓ ROW格式'
+        ELSE '✗ 格式不正确'
+    END AS binlog_format,
+    CASE
+        WHEN @@sync_binlog = 1 AND @@innodb_flush_log_at_trx_commit = 1
+        THEN '✓ 双1配置'
+        ELSE '✗ 配置不正确'
+    END AS durability_config;
 
--- 查看数据库
 SHOW DATABASES LIKE 'mysql_study';
-
--- 查看测试表
-SELECT COUNT(*) AS table_exists
-FROM information_schema.tables
-WHERE table_schema = 'mysql_study' AND table_name = 'T';
+EOF
 ```
+
+**检查清单**：
+- [x] Docker已安装并运行
+- [x] MySQL容器成功启动
+- [x] binlog已开启（log_bin = ON）
+- [x] binlog格式为ROW
+- [x] 双1配置生效
+- [x] 创建了 mysql_study 数据库
+- [x] 创建了测试表 T
+- [x] 能够查看慢查询日志
+- [x] 配置文件正确挂载
+
+---
+
+## 十一、其他安装方式（参考）
+
+如果你不想使用Docker，也可以选择本地安装：
+
+### macOS Homebrew
+
+```bash
+brew install mysql
+brew services start mysql
+mysql_secure_installation
+mysql -uroot -p
+```
+
+### Linux
+
+```bash
+# Ubuntu/Debian
+sudo apt update && sudo apt install mysql-server
+
+# CentOS/RHEL
+sudo yum install mysql-server
+
+sudo systemctl start mysqld
+mysql -uroot -p
+```
+
+**注意**：本地安装需要手动配置 `/etc/my.cnf` 或 `/etc/mysql/my.cnf`，配置内容参考上面的Docker配置文件。
 
 ---
 
 ## 准备完成！
 
-环境搭建完成后，你可以开始：
+环境搭建完成后，开始学习之旅：
 
-1. **基础篇**：学习MySQL架构、日志系统、事务、索引、锁机制
-2. **实践篇**：深入索引优化、性能调优、高可用架构
-3. **进阶篇**：join优化、临时表、特殊场景处理
+1. ✅ **已完成**：环境准备
+2. ➡️ **下一步**：`01-架构与日志系统.md` - 学习MySQL架构和SQL执行流程
 
-**下一步**：开始 `01-基础篇实操教程.md`
+**提示**：
+- 本教程所有命令都基于Docker环境
+- 所有SQL示例都可以直接在 `mysql_study` 数据库中执行
+- 遇到问题先查看Docker日志：`docker logs mysql-study`
+
+**祝学习顺利！** 🚀
