fix: 修正binlog查看命令和密码警告问题
- 修正mysqlbinlog命令（Docker镜像中不包含此工具）
- 改用SHOW BINLOG EVENTS SQL命令查看binlog
- 添加binlog详细查看示例（指定位置范围）
- 修正密码警告问题（使用docker exec -e参数）
- 移除不必要的-it参数（避免TTY错误）

--- a/docs/00-环境准备.md
+++ b/docs/00-环境准备.md
@@ -261,16 +261,31 @@ docker logs mysql-study
 docker logs -f mysql-study --tail 100
 
 # 查看慢查询日志
-docker exec -it mysql-study tail -f /var/log/mysql/mysql-slow.log
+docker exec mysql-study tail -f /var/log/mysql/mysql-slow.log
 
 # 或直接查看挂载目录
 tail -f ~/mysql-study/logs/mysql-slow.log
 
 # 查看binlog列表
-docker exec -it mysql-study mysql -uroot -p123456 -e "SHOW BINARY LOGS;"
+docker exec mysql-study mysql -uroot -p123456 -e "SHOW BINARY LOGS;"
 
-# 查看binlog内容
-docker exec -it mysql-study mysqlbinlog /var/lib/mysql/mysql-bin.000001
+# 查看binlog内容（使用SQL命令，推荐）
+docker exec mysql-study mysql -uroot -p123456 -e "SHOW BINLOG EVENTS IN 'mysql-bin.000001' LIMIT 20;"
+
+# 查看binlog详细信息（指定位置范围）
+docker exec mysql-study mysql -uroot -p123456 -e "
+SHOW BINLOG EVENTS IN 'mysql-bin.000002'
+FROM 4
+LIMIT 10;
+"
+
+# 或者从宿主机查看（需要安装mysql-client）
+# brew install mysql-client
+# mysqlbinlog ~/mysql-study/data/mysql-bin.000001 | less
+
+# 提示：避免密码警告
+# 使用-e参数传递环境变量（推荐）
+docker exec -e MYSQL_PWD=123456 mysql-study mysql -uroot -e "SHOW DATABASES;"
 ```
 
 ### 执行SQL文件
