fix: 修正SQL文件执行命令并添加无密码警告方式
- 添加避免密码警告的SQL文件执行方式
- 移除不必要的-it参数（执行SQL文件时不需要TTY）
- 添加示例说明

--- a/docs/00-环境准备.md
+++ b/docs/00-环境准备.md
@@ -294,9 +294,12 @@ docker exec -e MYSQL_PWD=123456 mysql-study mysql -uroot -e "SHOW DATABASES;"
 # 从宿主机执行SQL文件
 docker exec -i mysql-study mysql -uroot -p123456 mysql_study < ~/mysql-study/scripts/test.sql
 
+# 避免密码警告的方式
+docker exec -i -e MYSQL_PWD=123456 mysql-study mysql -uroot mysql_study < ~/mysql-study/scripts/test.sql
+
 # 或复制文件到容器内执行
 docker cp ~/mysql-study/scripts/test.sql mysql-study:/tmp/
-docker exec -it mysql-study mysql -uroot -p123456 mysql_study -e "source /tmp/test.sql"
+docker exec mysql-study mysql -uroot -p123456 mysql_study -e "source /tmp/test.sql"
 ```
 
 ---
