docs: 添加测试SQL文件创建步骤和示例代码
- 添加test.sql文件的完整创建步骤
- 添加01-basic/example.sql示例SQL代码
- 更新目录结构说明，展示完整的文件组织
- 确保用户可以直接复制命令完成环境准备

--- a/docs/00-环境准备.md
+++ b/docs/00-环境准备.md
@@ -288,6 +288,40 @@ LIMIT 10;
 docker exec -e MYSQL_PWD=123456 mysql-study mysql -uroot -e "SHOW DATABASES;"
 ```
 
+### 创建测试SQL文件
+
+为了测试SQL文件执行功能，先创建一个测试文件：
+
+```bash
+# 创建scripts目录（如果还没创建）
+mkdir -p ~/mysql-study/scripts/{01-basic,02-practice,backup}
+
+# 创建测试SQL文件
+cat > ~/mysql-study/scripts/test.sql << 'EOF'
+-- 测试SQL文件
+USE mysql_study;
+
+-- 创建测试表
+CREATE TABLE IF NOT EXISTS test_table (
+    id INT PRIMARY KEY AUTO_INCREMENT,
+    name VARCHAR(50),
+    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
+);
+
+-- 插入测试数据
+INSERT INTO test_table (name) VALUES
+('测试数据1'),
+('测试数据2'),
+('测试数据3');
+
+-- 查询数据
+SELECT * FROM test_table;
+EOF
+
+# 验证文件已创建
+cat ~/mysql-study/scripts/test.sql
+```
+
 ### 执行SQL文件
 
 ```bash
@@ -311,20 +345,52 @@ docker exec mysql-study mysql -uroot -p123456 mysql_study -e "source /tmp/test.s
 ```
 ~/mysql-study/
 ├── conf/
-│   └── my.cnf          # MySQL配置文件
-├── data/               # MySQL数据文件（自动创建）
-├── logs/               # 日志文件（自动创建）
-│   ├── mysql-slow.log  # 慢查询日志
-│   └── error.log       # 错误日志
-└── scripts/            # SQL脚本（手动创建）
-    ├── 01-basic/
-    ├── 02-practice/
-    └── backup/
+│   └── my.cnf              # MySQL配置文件
+├── data/                   # MySQL数据文件（自动创建）
+├── logs/                   # 日志文件（自动创建）
+│   ├── mysql-slow.log      # 慢查询日志
+│   └── error.log           # 错误日志
+└── scripts/                # SQL脚本
+    ├── test.sql            # 测试SQL文件
+    ├── 01-basic/           # 基础篇SQL
+    │   └── example.sql
+    ├── 02-practice/        # 实践篇SQL
+    └── backup/             # 备份文件
 ```
 
-创建脚本目录：
+创建完整目录结构：
 ```bash
 mkdir -p ~/mysql-study/scripts/{01-basic,02-practice,backup}
+
+# 创建基础篇示例SQL
+cat > ~/mysql-study/scripts/01-basic/example.sql << 'EOF'
+-- 基础篇示例SQL
+-- 对应：01-架构与日志系统.md
+
+USE mysql_study;
+
+-- 创建用户表
+CREATE TABLE IF NOT EXISTS users (
+    id INT PRIMARY KEY AUTO_INCREMENT,
+    name VARCHAR(50) NOT NULL,
+    age INT,
+    email VARCHAR(100),
+    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
+) ENGINE=InnoDB;
+
+-- 插入测试数据
+INSERT INTO users (name, age, email) VALUES
+('张三', 25, 'zhangsan@example.com'),
+('李四', 30, 'lisi@example.com'),
+('王五', 28, 'wangwu@example.com'),
+('赵六', 35, 'zhaoliu@example.com');
+
+-- 查询数据
+SELECT * FROM users;
+
+-- 查看表结构
+SHOW CREATE TABLE users\G
+EOF
 ```
 
 ### 修改配置
