fix: 修正备份和恢复命令的密码警告
- 使用-e MYSQL_PWD环境变量替代-p密码参数
- 适用于mysqldump备份命令
- 适用于mysql恢复命令
- 所有备份恢复操作均无密码警告

--- a/docs/00-环境准备.md
+++ b/docs/00-环境准备.md
@@ -360,8 +360,6 @@ docker exec mysql-study mysql -uroot -p123456 mysql_study -e "source /tmp/test.s
 
 创建完整目录结构：
 ```bash
-mkdir -p ~/mysql-study/scripts/{01-basic,02-practice,backup}
-
 # 创建基础篇示例SQL
 cat > ~/mysql-study/scripts/01-basic/example.sql << 'EOF'
 -- 基础篇示例SQL
@@ -431,7 +429,7 @@ SHOW VARIABLES WHERE Variable_name LIKE 'general_log%';
 
 ```bash
 # 方式1：使用mysqldump（推荐）
-docker exec mysql-study mysqldump -uroot -p123456 \
+docker exec -e MYSQL_PWD=123456 mysql-study mysqldump -uroot \
   --single-transaction \
   --routines \
   --triggers \
@@ -439,7 +437,7 @@ docker exec mysql-study mysqldump -uroot -p123456 \
   mysql_study > ~/mysql-study/scripts/backup/mysql_study_$(date +%Y%m%d).sql
 
 # 方式2：备份所有数据库
-docker exec mysql-study mysqldump -uroot -p123456 \
+docker exec -e MYSQL_PWD=123456 mysql-study mysqldump -uroot \
   --all-databases \
   --single-transaction \
   > ~/mysql-study/scripts/backup/all_databases_$(date +%Y%m%d).sql
@@ -454,11 +452,11 @@ docker start mysql-study
 
 ```bash
 # 从SQL文件恢复
-docker exec -i mysql-study mysql -uroot -p123456 mysql_study \
+docker exec -i -e MYSQL_PWD=123456 mysql-study mysql -uroot mysql_study \
   < ~/mysql-study/scripts/backup/mysql_study_20241224.sql
 
 # 恢复所有数据库
-docker exec -i mysql-study mysql -uroot -p123456 \
+docker exec -i -e MYSQL_PWD=123456 mysql-study mysql -uroot \
   < ~/mysql-study/scripts/backup/all_databases_20241224.sql
 ```
 
