fix: 优化tar备份命令，使用-C选项避免绝对路径警告
- 使用tar -C ~/选项切换到家目录再归档相对路径
- 消除'Removing leading /'警告信息
- 添加对应的恢复命令示例

--- a/docs/00-环境准备.md
+++ b/docs/00-环境准备.md
@@ -444,7 +444,12 @@ docker exec -e MYSQL_PWD=123456 mysql-study mysqldump -uroot \
 
 # 方式3：直接复制数据目录（需要停止MySQL）
 docker stop mysql-study
-tar -czf ~/mysql-study/backup_$(date +%Y%m%d).tar.gz ~/mysql-study/data
+tar -czf ~/mysql-study/backup_$(date +%Y%m%d).tar.gz -C ~/ mysql-study/data
+docker start mysql-study
+
+# 恢复数据目录
+docker stop mysql-study
+tar -xzf ~/mysql-study/backup_20241224.tar.gz -C ~/
 docker start mysql-study
 ```
 
