refactor: 大幅简化环境准备文档
- 主流程精简为3步，5分钟完成环境搭建
- 启动命令直接包含binlog等必要配置参数
- 复杂内容（完整配置、备份恢复等）折叠到附录
- 文档长度从660行减少到280行
- 让用户快速进入核心学习内容

--- a/docs/00-环境准备.md
+++ b/docs/00-环境准备.md
@@ -1,219 +1,70 @@
 # MySQL 实操环境准备
 
-> 在开始学习之前，我们需要先搭建一个本地MySQL环境用于实际操作
+> 5分钟快速搭建MySQL学习环境，然后开始学习！
 >
-> **本教程统一使用Docker方式，干净、隔离、易于管理**
+> **本教程使用Docker方式，简单、干净**
 
 ---
 
-## 一、环境要求
+## 快速开始（3步搞定）
 
-- **Docker**：已安装并运行（[安装Docker](https://www.docker.com/get-started)）
-- **MySQL版本**：8.0（推荐）或 5.7
-- **磁盘空间**：至少 10GB 可用空间
-- **内存**：建议 4GB 以上
-
-验证Docker是否安装：
-```bash
-docker --version
-docker ps
-```
-
----
-
-## 二、快速启动（基础配置）
-
-如果你想快速开始学习，使用以下命令即可启动MySQL：
+### 步骤1：启动MySQL容器
 
 ```bash
-# 启动MySQL容器
 docker run --name mysql-study \
   -e MYSQL_ROOT_PASSWORD=123456 \
   -p 3306:3306 \
-  -v ~/mysql-data:/var/lib/mysql \
+  -v ~/mysql-study/data:/var/lib/mysql \
   -d mysql:8.0 \
   --character-set-server=utf8mb4 \
-  --collation-server=utf8mb4_unicode_ci
+  --collation-server=utf8mb4_unicode_ci \
+  --log-bin=mysql-bin \
+  --binlog-format=ROW \
+  --server-id=1
+```
 
-# 连接MySQL
+等待10秒让MySQL启动完成。
+
+### 步骤2：连接MySQL
+
+```bash
 docker exec -it mysql-study mysql -uroot -p123456
-
-# 创建学习数据库
-CREATE DATABASE mysql_study DEFAULT CHARACTER SET utf8mb4;
 ```
 
-**但是**，为了更好地学习MySQL内部机制（binlog、慢查询、性能优化等），建议使用下面的**完整配置方式**。
+### 步骤3：创建学习数据库
 
----
-
-## 三、完整配置（推荐）
-
-### 步骤1：创建配置文件
-
-```bash
-# 创建配置文件目录
-mkdir -p ~/mysql-study/conf
-
-# 创建MySQL配置文件
-cat > ~/mysql-study/conf/my.cnf << 'EOF'
-[mysqld]
-# 基础配置
-character-set-server=utf8mb4
-collation-server=utf8mb4_unicode_ci
-default-time-zone='+8:00'
-
-# 服务器ID（用于主从复制实验）
-server-id=1
-
-# ========== binlog配置 ==========
-# 开启binlog（重要！）
-log-bin=mysql-bin
-binlog_format=ROW
-binlog_expire_logs_seconds=604800  # 7天过期（MySQL 8.0）
-# expire_logs_days=7  # MySQL 5.7使用此参数
-max_binlog_size=100M
-
-# binlog持久化（双1配置之一）
-sync_binlog=1
-
-# ========== redo log配置 ==========
-innodb_log_file_size=256M
-innodb_log_files_in_group=2
-innodb_flush_log_at_trx_commit=1  # 双1配置之二
-
-# ========== 慢查询日志 ==========
-slow_query_log=1
-slow_query_log_file=/var/log/mysql/mysql-slow.log
-long_query_time=2
-log_queries_not_using_indexes=1
-
-# ========== 通用查询日志（调试用） ==========
-# 默认关闭，需要时可以动态开启
-general_log=0
-general_log_file=/var/log/mysql/mysql-general.log
-
-# ========== 性能配置 ==========
-innodb_buffer_pool_size=1G
-max_connections=200
-innodb_io_capacity=2000
-innodb_io_capacity_max=4000
-
-# ========== 其他实用配置 ==========
-# 允许本地文件导入
-local_infile=1
-
-# 时区表
-log_timestamps=SYSTEM
-
-[mysql]
-default-character-set=utf8mb4
-
-[client]
-default-character-set=utf8mb4
-EOF
-```
-
-### 步骤2：启动MySQL容器（完整配置）
-
-```bash
-# 停止并删除旧容器（如果存在）
-docker stop mysql-study 2>/dev/null || true
-docker rm mysql-study 2>/dev/null || true
-
-# 启动MySQL容器（挂载配置文件）
-docker run --name mysql-study \
-  -e MYSQL_ROOT_PASSWORD=123456 \
-  -p 3306:3306 \
-  -v ~/mysql-study/conf/my.cnf:/etc/mysql/conf.d/my.cnf \
-  -v ~/mysql-study/data:/var/lib/mysql \
-  -v ~/mysql-study/logs:/var/log/mysql \
-  -d mysql:8.0
-
-# 等待MySQL启动（约10秒）
-sleep 10
-
-# 查看容器状态
-docker ps | grep mysql-study
-
-# 查看MySQL启动日志
-docker logs mysql-study
-```
-
-### 步骤3：验证配置
-
-```bash
-# 连接MySQL
-docker exec -it mysql-study mysql -uroot -p123456
-
-# 在MySQL中执行以下命令验证配置
-```
+在MySQL中执行：
 
 ```sql
--- 1. 验证binlog是否开启
-SHOW VARIABLES LIKE 'log_bin';
--- 应该显示 ON
-
--- 2. 验证binlog格式
-SHOW VARIABLES LIKE 'binlog_format';
--- 应该显示 ROW
-
--- 3. 验证双1配置
-SHOW VARIABLES LIKE 'sync_binlog';
--- 应该显示 1
-
-SHOW VARIABLES LIKE 'innodb_flush_log_at_trx_commit';
--- 应该显示 1
-
--- 4. 验证慢查询日志
-SHOW VARIABLES LIKE 'slow_query_log';
--- 应该显示 ON
-
--- 5. 查看MySQL版本
-SELECT VERSION();
-
--- 6. 查看字符集
-SHOW VARIABLES LIKE 'character%';
-```
-
----
-
-## 四、初始化学习环境
-
-连接到MySQL后，执行以下初始化操作：
-
-```sql
--- 创建学习用的数据库
+-- 创建学习数据库
 CREATE DATABASE mysql_study DEFAULT CHARACTER SET utf8mb4;
 
 -- 切换到学习数据库
 USE mysql_study;
 
--- 创建课程第1讲中的测试表
-CREATE TABLE T (
-    ID INT PRIMARY KEY,
-    c INT
+-- 创建测试表
+CREATE TABLE users (
+    id INT PRIMARY KEY AUTO_INCREMENT,
+    name VARCHAR(50) NOT NULL,
+    age INT,
+    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
 ) ENGINE=InnoDB;
 
 -- 插入测试数据
-INSERT INTO T VALUES (1, 1), (2, 2), (3, 3), (4, 4), (5, 5);
+INSERT INTO users (name, age) VALUES
+('张三', 25),
+('李四', 30),
+('王五', 28);
 
--- 验证数据
-SELECT * FROM T;
-
--- 查看表结构
-SHOW CREATE TABLE T\G
-
--- (可选) 创建测试用户
-CREATE USER 'student'@'%' IDENTIFIED BY 'student123';
-GRANT ALL PRIVILEGES ON mysql_study.* TO 'student'@'%';
-FLUSH PRIVILEGES;
+-- 验证
+SELECT * FROM users;
 ```
+
+看到3条数据？**环境搭建完成！** 现在可以开始学习 `01-架构与日志系统.md` 了！
 
 ---
 
-## 五、常用Docker命令
-
-### 容器管理
+## 常用命令
 
 ```bash
 # 启动容器
@@ -225,270 +76,65 @@ docker stop mysql-study
 # 重启容器
 docker restart mysql-study
 
+# 连接MySQL
+docker exec -it mysql-study mysql -uroot -p123456
+
 # 查看容器状态
 docker ps -a | grep mysql-study
 
-# 查看容器日志
+# 查看日志
 docker logs mysql-study
-docker logs -f mysql-study  # 实时跟踪日志
-
-# 删除容器（数据会保留在挂载目录）
-docker rm -f mysql-study
-```
-
-### 连接MySQL
-
-```bash
-# 方式1：使用docker exec（推荐）
-docker exec -it mysql-study mysql -uroot -p123456
-
-# 方式2：指定数据库连接
-docker exec -it mysql-study mysql -uroot -p123456 mysql_study
-
-# 方式3：使用本地MySQL客户端（需要安装mysql-client）
-mysql -h 127.0.0.1 -P 3306 -uroot -p123456
-
-# 方式4：使用mycli（带语法高亮）
-# brew install mycli
-mycli -h 127.0.0.1 -P 3306 -uroot -p123456
-```
-
-### 查看日志
-
-```bash
-# 查看容器日志（MySQL启动日志、错误日志）
-docker logs mysql-study
-docker logs -f mysql-study --tail 100
-
-# 查看慢查询日志
-docker exec mysql-study tail -f /var/log/mysql/mysql-slow.log
-
-# 或直接查看挂载目录
-tail -f ~/mysql-study/logs/mysql-slow.log
-
-# 查看binlog列表
-docker exec mysql-study mysql -uroot -p123456 -e "SHOW BINARY LOGS;"
-
-# 查看binlog内容（使用SQL命令，推荐）
-docker exec mysql-study mysql -uroot -p123456 -e "SHOW BINLOG EVENTS IN 'mysql-bin.000001' LIMIT 20;"
-
-# 查看binlog详细信息（指定位置范围）
-docker exec mysql-study mysql -uroot -p123456 -e "
-SHOW BINLOG EVENTS IN 'mysql-bin.000002'
-FROM 4
-LIMIT 10;
-"
-
-# 或者从宿主机查看（需要安装mysql-client）
-# brew install mysql-client
-# mysqlbinlog ~/mysql-study/data/mysql-bin.000001 | less
-
-# 提示：避免密码警告
-# 使用-e参数传递环境变量（推荐）
-docker exec -e MYSQL_PWD=123456 mysql-study mysql -uroot -e "SHOW DATABASES;"
-```
-
-### 创建测试SQL文件
-
-为了测试SQL文件执行功能，先创建一个测试文件：
-
-```bash
-# 创建scripts目录（如果还没创建）
-mkdir -p ~/mysql-study/scripts/{01-basic,02-practice,backup}
-
-# 创建测试SQL文件
-cat > ~/mysql-study/scripts/test.sql << 'EOF'
--- 测试SQL文件
-USE mysql_study;
-
--- 创建测试表
-CREATE TABLE IF NOT EXISTS test_table (
-    id INT PRIMARY KEY AUTO_INCREMENT,
-    name VARCHAR(50),
-    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
-);
-
--- 插入测试数据
-INSERT INTO test_table (name) VALUES
-('测试数据1'),
-('测试数据2'),
-('测试数据3');
-
--- 查询数据
-SELECT * FROM test_table;
-EOF
-
-# 验证文件已创建
-cat ~/mysql-study/scripts/test.sql
-```
-
-### 执行SQL文件
-
-```bash
-# 从宿主机执行SQL文件
-docker exec -i mysql-study mysql -uroot -p123456 mysql_study < ~/mysql-study/scripts/test.sql
-
-# 避免密码警告的方式
-docker exec -i -e MYSQL_PWD=123456 mysql-study mysql -uroot mysql_study < ~/mysql-study/scripts/test.sql
-
-# 或复制文件到容器内执行
-docker cp ~/mysql-study/scripts/test.sql mysql-study:/tmp/
-docker exec mysql-study mysql -uroot -p123456 mysql_study -e "source /tmp/test.sql"
 ```
 
 ---
 
-## 六、配置文件说明
+## 验证环境（可选）
 
-### 目录结构
-
-```
-~/mysql-study/
-├── conf/
-│   └── my.cnf              # MySQL配置文件
-├── data/                   # MySQL数据文件（自动创建）
-├── logs/                   # 日志文件（自动创建）
-│   ├── mysql-slow.log      # 慢查询日志
-│   └── error.log           # 错误日志
-└── scripts/                # SQL脚本
-    ├── test.sql            # 测试SQL文件
-    ├── 01-basic/           # 基础篇SQL
-    │   └── example.sql
-    ├── 02-practice/        # 实践篇SQL
-    └── backup/             # 备份文件
-```
-
-创建完整目录结构：
-```bash
-# 创建基础篇示例SQL
-cat > ~/mysql-study/scripts/01-basic/example.sql << 'EOF'
--- 基础篇示例SQL
--- 对应：01-架构与日志系统.md
-
-USE mysql_study;
-
--- 创建用户表
-CREATE TABLE IF NOT EXISTS users (
-    id INT PRIMARY KEY AUTO_INCREMENT,
-    name VARCHAR(50) NOT NULL,
-    age INT,
-    email VARCHAR(100),
-    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
-) ENGINE=InnoDB;
-
--- 插入测试数据
-INSERT INTO users (name, age, email) VALUES
-('张三', 25, 'zhangsan@example.com'),
-('李四', 30, 'lisi@example.com'),
-('王五', 28, 'wangwu@example.com'),
-('赵六', 35, 'zhaoliu@example.com');
-
--- 查询数据
-SELECT * FROM users;
-
--- 查看表结构
-SHOW CREATE TABLE users\G
-EOF
-```
-
-### 修改配置
-
-如果需要修改MySQL配置：
-
-```bash
-# 1. 编辑配置文件
-vim ~/mysql-study/conf/my.cnf
-
-# 2. 重启容器使配置生效
-docker restart mysql-study
-
-# 3. 验证配置
-docker exec -it mysql-study mysql -uroot -p123456 -e "SHOW VARIABLES LIKE 'binlog%';"
-```
-
-### 动态修改配置（不重启）
-
-某些配置可以动态修改：
+如果想验证binlog等配置是否生效：
 
 ```sql
--- 开启通用查询日志（调试时使用）
-SET GLOBAL general_log = 1;
+-- 验证binlog是否开启
+SHOW VARIABLES LIKE 'log_bin';
+-- 应该显示 ON
 
--- 修改慢查询阈值
-SET GLOBAL long_query_time = 1;
+-- 验证binlog格式
+SHOW VARIABLES LIKE 'binlog_format';
+-- 应该显示 ROW
 
--- 查看可动态修改的变量
-SHOW VARIABLES WHERE Variable_name LIKE 'general_log%';
+-- 查看MySQL版本
+SELECT VERSION();
+
+-- 查看字符集
+SHOW VARIABLES LIKE 'character%';
 ```
 
 ---
 
-## 七、备份与恢复
+## 环境说明
 
-### 数据备份
-
-```bash
-# 方式1：使用mysqldump（推荐）
-docker exec -e MYSQL_PWD=123456 mysql-study mysqldump -uroot \
-  --single-transaction \
-  --routines \
-  --triggers \
-  --events \
-  mysql_study > ~/mysql-study/scripts/backup/mysql_study_$(date +%Y%m%d).sql
-
-# 方式2：备份所有数据库
-docker exec -e MYSQL_PWD=123456 mysql-study mysqldump -uroot \
-  --all-databases \
-  --single-transaction \
-  > ~/mysql-study/scripts/backup/all_databases_$(date +%Y%m%d).sql
-
-# 方式3：直接复制数据目录（需要停止MySQL）
-docker stop mysql-study
-tar -czf ~/mysql-study/backup_$(date +%Y%m%d).tar.gz -C ~/ mysql-study/data
-docker start mysql-study
-
-# 恢复数据目录
-docker stop mysql-study
-tar -xzf ~/mysql-study/backup_20241224.tar.gz -C ~/
-docker start mysql-study
-```
-
-### 数据恢复
-
-```bash
-# 从SQL文件恢复
-docker exec -i -e MYSQL_PWD=123456 mysql-study mysql -uroot mysql_study \
-  < ~/mysql-study/scripts/backup/mysql_study_20241224.sql
-
-# 恢复所有数据库
-docker exec -i -e MYSQL_PWD=123456 mysql-study mysql -uroot \
-  < ~/mysql-study/scripts/backup/all_databases_20241224.sql
-```
+- **数据存储**：`~/mysql-study/data/`（在你的Mac上）
+- **root密码**：`123456`
+- **端口**：`3306`
+- **MySQL版本**：8.0
+- **字符集**：utf8mb4
 
 ---
 
-## 八、故障排查
+## 遇到问题？
 
 ### 容器无法启动
 
 ```bash
-# 查看详细日志
+# 查看错误日志
 docker logs mysql-study
 
-# 常见问题：
-# 1. 端口占用
-lsof -i:3306
-# 解决：修改端口映射 -p 3307:3306
-
-# 2. 配置文件错误
-docker run --rm -v ~/mysql-study/conf/my.cnf:/etc/mysql/conf.d/my.cnf \
-  mysql:8.0 mysqld --help --verbose
-
-# 3. 权限问题（数据目录）
-sudo chown -R $(whoami) ~/mysql-study/data
-
-# 4. 磁盘空间不足
-df -h
+# 端口被占用？改用其他端口
+docker run --name mysql-study \
+  -e MYSQL_ROOT_PASSWORD=123456 \
+  -p 3307:3306 \
+  -v ~/mysql-study/data:/var/lib/mysql \
+  -d mysql:8.0 \
+  --character-set-server=utf8mb4
 ```
 
 ### 连接被拒绝
@@ -497,33 +143,67 @@ df -h
 # 检查容器是否运行
 docker ps | grep mysql-study
 
-# 检查端口映射
-docker port mysql-study
-
-# 进入容器检查
-docker exec -it mysql-study bash
-mysql -uroot -p123456
+# 如果没运行，启动它
+docker start mysql-study
 ```
 
-```sql
--- 检查用户权限
-SELECT user, host FROM mysql.user;
-
--- 允许远程连接（如果需要）
-CREATE USER 'root'@'%' IDENTIFIED BY '123456';
-GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' WITH GRANT OPTION;
-FLUSH PRIVILEGES;
-```
-
-### 忘记root密码
+### 重新开始
 
 ```bash
-# 删除容器重新创建
+# 删除容器和数据，重新来过
 docker rm -f mysql-study
+rm -rf ~/mysql-study/data
+# 然后重新执行步骤1
+```
 
-# 重新启动（数据保留在~/mysql-study/data）
+---
+
+## 附录：高级配置（按需查看）
+
+<details>
+<summary>点击展开：完整配置文件方式</summary>
+
+如果需要更细粒度的配置控制，可以使用配置文件方式：
+
+```bash
+# 创建目录结构
+mkdir -p ~/mysql-study/{conf,data,logs}
+
+# 创建配置文件
+cat > ~/mysql-study/conf/my.cnf << 'EOF'
+[mysqld]
+character-set-server=utf8mb4
+collation-server=utf8mb4_unicode_ci
+default-time-zone='+8:00'
+server-id=1
+
+# binlog配置
+log-bin=mysql-bin
+binlog_format=ROW
+sync_binlog=1
+
+# redo log配置
+innodb_flush_log_at_trx_commit=1
+
+# 慢查询日志
+slow_query_log=1
+slow_query_log_file=/var/log/mysql/mysql-slow.log
+long_query_time=2
+
+# 性能配置
+innodb_buffer_pool_size=1G
+max_connections=200
+
+[mysql]
+default-character-set=utf8mb4
+
+[client]
+default-character-set=utf8mb4
+EOF
+
+# 启动容器（挂载配置文件）
 docker run --name mysql-study \
-  -e MYSQL_ROOT_PASSWORD=new_password \
+  -e MYSQL_ROOT_PASSWORD=123456 \
   -p 3306:3306 \
   -v ~/mysql-study/conf/my.cnf:/etc/mysql/conf.d/my.cnf \
   -v ~/mysql-study/data:/var/lib/mysql \
@@ -531,11 +211,53 @@ docker run --name mysql-study \
   -d mysql:8.0
 ```
 
----
+</details>
 
-## 九、性能监控
+<details>
+<summary>点击展开：数据备份与恢复</summary>
 
-### 常用监控命令
+### 备份数据库
+
+```bash
+# 备份单个数据库
+docker exec -e MYSQL_PWD=123456 mysql-study mysqldump -uroot \
+  --single-transaction \
+  mysql_study > ~/mysql-study-backup.sql
+
+# 备份所有数据库
+docker exec -e MYSQL_PWD=123456 mysql-study mysqldump -uroot \
+  --all-databases \
+  --single-transaction \
+  > ~/mysql-all-backup.sql
+```
+
+### 恢复数据库
+
+```bash
+# 恢复数据库
+docker exec -i -e MYSQL_PWD=123456 mysql-study mysql -uroot mysql_study \
+  < ~/mysql-study-backup.sql
+```
+
+</details>
+
+<details>
+<summary>点击展开：查看binlog</summary>
+
+```bash
+# 查看binlog列表
+docker exec -e MYSQL_PWD=123456 mysql-study mysql -uroot \
+  -e "SHOW BINARY LOGS;"
+
+# 查看binlog内容
+docker exec -e MYSQL_PWD=123456 mysql-study mysql -uroot \
+  -e "SHOW BINLOG EVENTS IN 'mysql-bin.000001' LIMIT 10;"
+```
+
+</details>
+
+<details>
+<summary>点击展开：性能监控命令</summary>
 
 ```sql
 -- 查看当前连接
@@ -544,117 +266,15 @@ SHOW FULL PROCESSLIST;
 -- 查看InnoDB状态
 SHOW ENGINE INNODB STATUS\G
 
--- 查看表状态
-SHOW TABLE STATUS LIKE 'T'\G
-
--- 查看慢查询统计
+-- 查看慢查询数量
 SHOW GLOBAL STATUS LIKE 'Slow_queries';
-
--- 查看连接数
-SHOW STATUS LIKE 'Threads%';
-SHOW VARIABLES LIKE 'max_connections';
 
 -- 查看buffer pool使用情况
 SHOW STATUS LIKE 'Innodb_buffer_pool%';
 ```
 
-### 分析慢查询日志
-
-```bash
-# 查看慢查询日志
-docker exec -it mysql-study tail -100 /var/log/mysql/mysql-slow.log
-
-# 使用pt-query-digest分析（需要安装percona-toolkit）
-docker exec -it mysql-study pt-query-digest /var/log/mysql/mysql-slow.log
-```
+</details>
 
 ---
 
-## 十、环境验证清单
-
-完成以下检查确保环境就绪：
-
-```bash
-# 执行验证脚本
-docker exec -it mysql-study mysql -uroot -p123456 << 'EOF'
-SELECT
-    '环境检查' AS check_item,
-    CASE
-        WHEN @@version LIKE '8.0%' THEN '✓ MySQL 8.0'
-        WHEN @@version LIKE '5.7%' THEN '✓ MySQL 5.7'
-        ELSE '✗ 版本不符'
-    END AS mysql_version,
-    CASE
-        WHEN @@log_bin = 1 THEN '✓ 已开启'
-        ELSE '✗ 未开启'
-    END AS binlog_status,
-    CASE
-        WHEN @@binlog_format = 'ROW' THEN '✓ ROW格式'
-        ELSE '✗ 格式不正确'
-    END AS binlog_format,
-    CASE
-        WHEN @@sync_binlog = 1 AND @@innodb_flush_log_at_trx_commit = 1
-        THEN '✓ 双1配置'
-        ELSE '✗ 配置不正确'
-    END AS durability_config;
-
-SHOW DATABASES LIKE 'mysql_study';
-EOF
-```
-
-**检查清单**：
-- [x] Docker已安装并运行
-- [x] MySQL容器成功启动
-- [x] binlog已开启（log_bin = ON）
-- [x] binlog格式为ROW
-- [x] 双1配置生效
-- [x] 创建了 mysql_study 数据库
-- [x] 创建了测试表 T
-- [x] 能够查看慢查询日志
-- [x] 配置文件正确挂载
-
----
-
-## 十一、其他安装方式（参考）
-
-如果你不想使用Docker，也可以选择本地安装：
-
-### macOS Homebrew
-
-```bash
-brew install mysql
-brew services start mysql
-mysql_secure_installation
-mysql -uroot -p
-```
-
-### Linux
-
-```bash
-# Ubuntu/Debian
-sudo apt update && sudo apt install mysql-server
-
-# CentOS/RHEL
-sudo yum install mysql-server
-
-sudo systemctl start mysqld
-mysql -uroot -p
-```
-
-**注意**：本地安装需要手动配置 `/etc/my.cnf` 或 `/etc/mysql/my.cnf`，配置内容参考上面的Docker配置文件。
-
----
-
-## 准备完成！
-
-环境搭建完成后，开始学习之旅：
-
-1. ✅ **已完成**：环境准备
-2. ➡️ **下一步**：`01-架构与日志系统.md` - 学习MySQL架构和SQL执行流程
-
-**提示**：
-- 本教程所有命令都基于Docker环境
-- 所有SQL示例都可以直接在 `mysql_study` 数据库中执行
-- 遇到问题先查看Docker日志：`docker logs mysql-study`
-
-**祝学习顺利！** 🚀
+**准备完成！开始学习 → `01-架构与日志系统.md`** 🚀
