docs: 更新执行器演示部分，添加MySQL 8.0+权限检查说明
- 增加注意事项，强调代码仅用于演示权限检查概念
- 说明MySQL 8.0+中GRANT语法的变化，需先创建用户再授权
- 更新SQL注释，明确该段代码为概念演示，用户可跳过实际执行

--- a/docs/01-架构与日志系统.md
+++ b/docs/01-架构与日志系统.md
@@ -132,8 +132,13 @@ WHERE u.age > 25;
 
 #### 6. 执行器演示
 
+> **注意**：本段代码仅用于演示执行器权限检查的概念，**可跳过实际执行**。
+>
+> MySQL 8.0+ 中，GRANT 语法已改变，不能直接创建用户，需要先用 `CREATE USER` 创建用户再授权。
+> 理解执行器会做权限检查即可，无需实际操作。
+
 ```sql
--- 查看执行器权限检查
+-- 查看执行器权限检查（仅概念演示，可跳过）
 -- 假设当前用户没有users表的SELECT权限
 REVOKE SELECT ON mysql_study.users FROM 'test_user'@'localhost';
 -- 执行器会报错：SELECT command denied
